--- a/force-app/main/default/classes/AppointmentTriggerHandler.cls
+++ b/force-app/main/default/classes/AppointmentTriggerHandler.cls
@@ -5,17 +5,18 @@ public with sharing class AppointmentTriggerHandler implements ITrigger {
         for (Appointment__c appointmentNew : (List<Appointment__c>)Trigger.new) {
             appointmentDatesNewList.add(appointmentNew.Appointment_Date__c);
         }
-
+        AppointmentTriggerHelper appointmentHelper=new  AppointmentTriggerHelper(appointmentDatesNewList);
 
 
         //compare doctors on the same dates
         for (Appointment__c appointmentNew :  (List<Appointment__c>)Trigger.new) {
 
-            for (Appointment__c appointmentOld : sameAppointmentDates) {
+            List<Appointment__c>oldDoctorAppointments= appointmentHelper.getDoctorAppointmentsForDateSortedByTime(appointmentNew.Doctor__r,appointmentNew.Appointment_Date__c);
+            for (Appointment__c appointmentOld : oldDoctorAppointments) {
 
-                if (appointmentNew.Appointment_Date__c == appointmentOld.Appointment_Date__c && appointmentNew.Doctor__c == appointmentOld.Doctor__c) {
+                if (appointmentNew.Appointment_Date__c == appointmentOld.Appointment_Date__c) {
 
-                    appointmentNew.addError('This time and date is already taken,select another');
+                    appointmentNew.addError('This date is already taken,select another');
 
                 }
             }
